# unmsg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  build-from-source.md  cli.md  getting-started.md  gui.md  index.md  privacy.md
installer/: README.md
installer/windows/: installer.iss  pyinstaller.spec
src/unmsg/: __init__.py  __main__.py  _version.py  cli.py  config.py  crash.py  logging_setup.py  parallel.py  paths.py  resume.py  updates.py
src/unmsg/core/: __init__.py  attachments.py  batch.py  html_cleanup.py  manifest.py  markdown.py  models.py  naming.py  options.py  pipeline.py  reader.py
src/unmsg/core/writer/: __init__.py  base.py  eml.py  html.py  html_single.py  json_meta.py  md.py  pdf.py  txt.py
src/unmsg/ui/: __init__.py  app.py  assets.py  main_window.py  theme.py  workers.py
src/unmsg/ui/dialogs/: __init__.py  about.py  error_details.py  first_run.py  help.py  settings.py
src/unmsg/ui/widgets/: __init__.py  drop_zone.py  file_list.py  log_pane.py  options_panel.py  progress_strip.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/fixtures/: README.md
tests/integration/: test_api.py  test_batch.py  test_determinism.py  test_parallel.py  test_pipeline.py
tests/ui/: conftest.py  test_flow.py  test_gui.py  test_theme.py  test_widgets.py  test_workers.py
tests/unit/: test_attachments.py  test_config.py  test_crash.py  test_html_cleanup.py  test_logging_setup.py  test_manifest.py  test_markdown.py  test_naming.py  test_public_api.py  test_reader.py  test_resume.py  test_updates.py  test_writer_eml.py  test_writer_pdf.py  test_writers.py  test_writers_txt_json.py
