[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unmsg"
dynamic = ["version"]
description = "Turn Outlook .msg files into clean Markdown, HTML, text, JSON, EML, and PDF."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rushyendra Guntupalli" }]
keywords = ["msg", "outlook", "email", "converter", "markdown", "eml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "extract-msg>=0.30",
    "markdownify>=0.11",
    "typer>=0.12",
    "pydantic>=2.5",
    "platformdirs>=4.0",
    "rich>=13.0",
]

# PySide6 is intentionally NOT a base dependency: `pip install unmsg` and the
# CLI stay light. The desktop GUI is opt-in via the `gui` extra; the packaged
# installer bundles Qt regardless.
[project.optional-dependencies]
gui = ["PySide6>=6.7"]
pdf = ["xhtml2pdf>=0.2.16"]
pandoc = ["pypandoc>=1.13"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    "nox>=2024.4",
    "pre-commit>=3.7",
]

[project.scripts]
unmsg = "unmsg.cli:app"

[project.gui-scripts]
unmsg-gui = "unmsg.ui.app:run"

[project.urls]
Homepage = "https://github.com/dog-broad/unmsg"
Source = "https://github.com/dog-broad/unmsg"
Issues = "https://github.com/dog-broad/unmsg/issues"

[tool.hatch.version]
path = "src/unmsg/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/unmsg"]

# ── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

# ── mypy: strict on core, present elsewhere ───────────────────────
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "unmsg.core.*"
strict = true

[[tool.mypy.overrides]]
module = ["extract_msg.*", "markdownify.*", "pypandoc.*", "xhtml2pdf.*", "reportlab.*"]
ignore_missing_imports = true

# ── pytest / coverage ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["unmsg.core"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

# ── import-linter: core must not import ui ────────────────────────
[tool.importlinter]
root_package = "unmsg"

[[tool.importlinter.contracts]]
name = "core is independent of ui and cli"
type = "forbidden"
source_modules = ["unmsg.core"]
forbidden_modules = ["unmsg.ui", "unmsg.cli"]
